--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         <!-- three.js를 모듈타입으로 import하기 위해 type="module"-->
         <!-- defer 속성일 설정되어 있어 페이지가 모두 로딩된 이후에 자바스크립트가 실행 -->
         <script type="module" src="./ClickAndZoom/ClickAndZoom.js" defer></script>
+        <!--CDN(콘텐츠 전송 네트워크) 방식으로 GSAP 라이브러리를 사용하기위해 script 포함-->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     </head>
     <body>
         <!-- div 요소에서 three.js 라이브러리 API를 이용하여 canvas가 추가될 것이다. -->
